--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -38,16 +38,16 @@
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:id="@+id/login_username"
+                android:id="@+id/email"
                 android:layout_marginTop="40dp"
                 android:padding="80dp"
-                android:hint="username"
+                android:hint="Email Address"
                 android:textColor="@color/black"/>
 
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:id="@+id/login_password"
+                android:id="@+id/password"
                 android:layout_marginTop="20dp"
                 android:padding="80dp"
                 android:inputType="textPassword"
@@ -58,7 +58,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
                 android:text="Login"
-                android:id="@+id/login_button"
+                android:id="@+id/logNow"
                 android:textSize="18dp"
                 android:layout_marginTop="30dp"
                 app:cornerRadius = "20dp"/>
@@ -66,7 +66,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:id="@+id/signupRedirectText"
+                android:id="@+id/SignPage"
                 android:layout_gravity="center"
                 android:padding="8dp"
                 android:layout_marginTop="10dp"
