--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -37,16 +37,7 @@
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:id="@+id/signup_name"
-                android:layout_marginTop="40dp"
-                android:padding="80dp"
-                android:hint="Name"
-                android:textColor="@color/black"/>
-
-            <EditText
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:id="@+id/signup_email"
+                android:id="@+id/email"
                 android:layout_marginTop="20dp"
                 android:padding="80dp"
                 android:hint="Email"
@@ -55,35 +46,35 @@
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:id="@+id/signup_username"
+                android:id="@+id/username"
                 android:layout_marginTop="20dp"
                 android:padding="80dp"
-                android:hint="username"
+                android:hint="Username"
                 android:textColor="@color/black"/>
 
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:id="@+id/signup_password"
+                android:id="@+id/password"
                 android:layout_marginTop="20dp"
                 android:padding="80dp"
                 android:inputType="textPassword"
-                android:hint="Password"
+                android:hint="@string/password"
                 android:textColor="@color/black"/>
 
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
                 android:text="Sign Up"
-                android:id="@+id/signup_button"
-                android:textSize="18dp"
+                android:id="@+id/signIn"
+                android:textSize="18sp"
                 android:layout_marginTop="30dp"
                 app:cornerRadius = "20dp"/>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:id="@+id/loginRedirectText"
+                android:id="@+id/regNow"
                 android:layout_gravity="center"
                 android:padding="8dp"
                 android:layout_marginTop="10dp"
